deploy/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: atmpl
  labels:
    app.kubernetes.io/name: atmpl
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: atmpl
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
